opam-version: "2.0"
name: "speex"
version: "0.2.1"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-speex"
build: [
  ["./bootstrap"] {pinned}
  ["./configure" "--prefix" prefix] {os != "macos"}
  [
    "./configure"
    "CFLAGS=-I/usr/local/include"
    "LDFLAGS=-L/usr/local/lib"
    "OCAMLFLAGS=-ccopt -I/usr/local/include -cclib -L/usr/local/lib"
    "--prefix"
    prefix
  ] {os = "macos"}
  [make "clean"] {pinned}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
  "ogg"
]
depexts: [
  ["speex-dev"] {os-distribution = "alpine"}
  ["speex-devel"] {os-distribution = "centos"}
  ["speex-devel"] {os-distribution = "fedora"}
  ["speex-devel"] {os-family = "suse"}
  ["libspeex-dev"] {os-distribution = "ubuntu"}
  ["libspeex-dev"] {os-distribution = "debian"}
  ["speex"] {os = "macos" & os-distribution = "homebrew"}
]
bug-reports: "https://github.com/savonet/ocaml-speex/issues"
dev-repo: "git+https://github.com/savonet/ocaml-speex.git"
synopsis:
  "Bindings for the speex library to decode audio files in speex format"
