(executable
 (name speex2wav)
 (modules speex2wav)
 (libraries speex))

(executable
 (name wav2speex)
 (modules wav2speex)
 (libraries speex))

(rule
 (alias runtest)
 (package speex)
 (deps
  (:speex test.ogg)
  (:wav2speex ./wav2speex.exe)
  (:speex2wav ./speex2wav.exe))
 (action
  (progn
    (run %{speex2wav} %{speex} decoded.wav)
    (run %{wav2speex} decoded.wav encoded.ogg))))
